objects/ssot__LinkedKnowledgeArticle__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Linked Knowledge Article Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgeArticleId__c</fullName>
        <label>Knowledge Article</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgeArticleVersionId__c</fullName>
        <label>Knowledge Article Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkedReferenceId__c</fullName>
        <label>Linked Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkedReferenceObject__c</fullName>
        <label>Linked Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009441012_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LinkedKnowledgeArticle_LinkedReferen_rel</label>
        <referenceTo>ssot__WorkOrderItem__dlm</referenceTo>
        <relationshipLabel>LinkedKnowledgeArticle_LinkedReferen_rel</relationshipLabel>
        <relationshipName>rel_1702009441012_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009441890_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LinkedKnowledgeArticle_LinkedReferen_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>LinkedKnowledgeArticle_LinkedReferen_rel</relationshipLabel>
        <relationshipName>rel_1702009441890_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009468915_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LinkedKnowledgeArticle_KnowledgeArti_rel</label>
        <referenceTo>ssot__KnowledgeArticleVersion__dlm</referenceTo>
        <relationshipLabel>LinkedKnowledgeArticle_KnowledgeArti_rel</relationshipLabel>
        <relationshipName>rel_1702009468915_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>